--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </div>
     <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 	    <div class="container">
-	      <a class="navbar-brand" href="index.html">Apolline</a>
+	      <a class="navbar-brand" href="index.html">Apolline General Trading L.L.C</a>
 	      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 	        <span class="oi oi-menu"></span> Menu
 	      </button>
@@ -659,9 +659,9 @@
             	<h2 class="ftco-heading-2">Have a Questions?</h2>
             	<div class="block-23 mb-3">
 	              <ul>
-	                <li><span class="icon icon-map-marker"></span><span class="text">203 Fake St. Mountain View, San Francisco, California, USA</span></li>
-	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+2 392 3929 210</span></a></li>
-	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">info@yourdomain.com</span></a></li>
+	                <li><span class="icon icon-map-marker"></span><span class="text"> Fresh Market Office no-D08, Al Aweer-Ras Al Khor, Dubai, UAE</span></li>
+	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+971 585514671</span></a></li>
+	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">admin@apolline.ae</span></a></li>
 	              </ul>
 	            </div>
             </div>
