--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
     	</div>
     </section>
 
-    <section class="ftco-section testimony-section">
+   <! -- <section class="ftco-section testimony-section">
       <div class="container">
         <div class="row justify-content-center mb-5 pb-3">
           <div class="col-md-7 heading-section ftco-animate text-center">
@@ -500,7 +500,7 @@
         </div>
       </div>
     </section>
-
+-->
     <hr>
 
     <footer class="ftco-footer ftco-section">
