--- a/index.html
+++ b/index.html
@@ -469,8 +469,9 @@
             	<div class="block-23 mb-3">
 	              <ul>
 	                <li><span class="icon icon-map-marker"></span><span class="text"> Office no-D08 ,Fresh Market, Al Aweer-Ras Al Khor, Dubai, UAE</span></li>
+	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+971 44493069</span></a></li>
 	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+971 585514671</span></a></li>
-	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">admin@apolline.ae</span></a></li>
+			<li><a href="#"><span class="icon icon-envelope"></span><span class="text">admin@apolline.ae</span></a></li>
 	              </ul>
 	            </div>
             </div>
