--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
 		    		<div class="row d-flex">
 		    			<div class="col-md pr-4 d-flex topper align-items-center">
 					    	<div class="icon mr-2 d-flex justify-content-center align-items-center"><span class="icon-phone2"></span></div>
-						    <span class="text">+971 44493069</span>
+						    <span class="text">+971 503307299</span>
 					    </div>
 					    <div class="col-md pr-4 d-flex topper align-items-center">
 					    	<div class="icon mr-2 d-flex justify-content-center align-items-center"><span class="icon-paper-plane"></span></div>
@@ -61,14 +61,6 @@
 	        <ul class="navbar-nav ml-auto">
 	          <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
 	          <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Shop</a>
-              <div class="dropdown-menu" aria-labelledby="dropdown04">
-              	<a class="dropdown-item" href="shop.html">Shop</a>
-              	<a class="dropdown-item" href="wishlist.html">Wishlist</a>
-                <a class="dropdown-item" href="product-single.html">Single Product</a>
-                <a class="dropdown-item" href="cart.html">Cart</a>
-                <a class="dropdown-item" href="checkout.html">Checkout</a>
-              </div>
             </li>
 	          <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
 	          <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
@@ -104,11 +96,13 @@
           <div class="col-md-3 d-flex">
           	<div class="info bg-white p-4">
 	            <p><span>Phone:</span> <a href="tel://1234567920">+971 44493069</a></p>
+			 <p><span>Phone:</span> <a href="tel://1234567920">+971 503307299</a></p>
 	          </div>
           </div>
           <div class="col-md-3 d-flex">
           	<div class="info bg-white p-4">
 	            <p><span>Email:</span> <a href="mailto:info@yoursite.com">admin@apolline.ae</a></p>
+			<p><span>Email:</span> <a href="mailto:info@yoursite.com">ronak@apolline.ae</a></p>
 	          </div>
           </div>
           <div class="col-md-3 d-flex">
@@ -202,7 +196,7 @@
 	              <ul>
 	                <li><span class="icon icon-map-marker"></span><span class="text"> Office no-D08 ,Fresh Market, Al Aweer-Ras Al Khor, Dubai, UAE</span></li>
 	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+971 44493069</span></a></li>
-	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+971 585514671</span></a></li>
+	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+971 503307299</span></a></li>
 			<li><a href="#"><span class="icon icon-envelope"></span><span class="text">admin@apolline.ae</span></a></li>
 	              </ul>
 	            </div>
