--- a/about.html
+++ b/about.html
@@ -228,7 +228,7 @@
         <div class="row mb-5">
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
-              <h2 class="ftco-heading-2">Vegefoods</h2>
+              <h2 class="ftco-heading-2">Apolline</h2>
               <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia.</p>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
                 <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
@@ -269,10 +269,11 @@
             <div class="ftco-footer-widget mb-4">
             	<h2 class="ftco-heading-2">Have a Questions?</h2>
             	<div class="block-23 mb-3">
-	              <ul>
-	                <li><span class="icon icon-map-marker"></span><span class="text">203 Fake St. Mountain View, San Francisco, California, USA</span></li>
-	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+2 392 3929 210</span></a></li>
-	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">info@yourdomain.com</span></a></li>
+	            <ul>
+	                <li><span class="icon icon-map-marker"></span><span class="text"> Office no-D08 ,Fresh Market, Al Aweer-Ras Al Khor, Dubai, UAE</span></li>
+	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+971 44493069</span></a></li>
+	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+971 503307299</span></a></li>
+			<li><a href="#"><span class="icon icon-envelope"></span><span class="text">admin@apolline.ae</span></a></li>
 	              </ul>
 	            </div>
             </div>
