--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
     						<div class="overlay"></div>
     					</a>
     					<div class="text py-3 pb-4 px-3 text-center">
-    						<h3><a href="#">Tomatoe</a></h3>
+    						<h3><a href="#">Tomato</a></h3>
     					</div>
     				</div>
     			</div>
@@ -316,17 +316,7 @@
               </ul>
             </div>
           </div>
-          <div class="col-md">
-            <div class="ftco-footer-widget mb-4 ml-md-5">
-              <h2 class="ftco-heading-2">Menu</h2>
-              <ul class="list-unstyled">
-                <li><a href="#" class="py-2 d-block">Shop</a></li>
-                <li><a href="#" class="py-2 d-block">About</a></li>
-                <li><a href="#" class="py-2 d-block">Journal</a></li>
-                <li><a href="#" class="py-2 d-block">Contact Us</a></li>
-              </ul>
-            </div>
-          </div>
+
           <div class="col-md-4">
              <div class="ftco-footer-widget mb-4">
               <h2 class="ftco-heading-2">Help</h2>
@@ -351,7 +341,7 @@
 	              <ul>
 	                <li><span class="icon icon-map-marker"></span><span class="text"> Office no-D08 ,Fresh Market, Al Aweer-Ras Al Khor, Dubai, UAE</span></li>
 	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+971 44493069</span></a></li>
-	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+971 585514671</span></a></li>
+	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+971 503307299</span></a></li>
 			<li><a href="#"><span class="icon icon-envelope"></span><span class="text">admin@apolline.ae</span></a></li>
 	              </ul>
 	            </div>
