--- a/contact.html
+++ b/contact.html
@@ -127,6 +127,10 @@
                 <input type="submit" value="Send Message" class="btn btn-primary py-3 px-5">
               </div>
             </form>
+<div class="col-md-6 d-flex">
+          	<div id="map" class="bg-white"></div>
+          </div>
+		  
           
           </div>
         </div>
