--- a/about.html
+++ b/about.html
@@ -94,7 +94,7 @@
 	            </div>
 	          </div>
 	          <div class="pb-md-5">
-	          	<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+	          	<p>[Your Company Name] is a leading import and export company with [number] years of experience in global trade. Our mission is to connect businesses worldwide, helping them thrive in an increasingly interconnected marketplace.</p>
 							<p>But nothing the copy said could convince her and so it didn’t take long until a few insidious Copy Writers ambushed her, made her drunk with Longe and Parole and dragged her into their agency, where they abused her for their.</p>
 
 						</div>
