--- a/about.html
+++ b/about.html
@@ -90,14 +90,22 @@
 					<div class="col-md-7 py-5 wrap-about pb-md-5 ftco-animate">
 	          <div class="heading-section-bold mb-4 mt-md-5">
 	          	<div class="ml-md-0">
-		            <h2 class="mb-4">Welcome to Apolline an eCommerce website</h2>
+		            <h2 class="mb-4">Who We Are</h2>
 	            </div>
 	          </div>
 	          <div class="pb-md-5">
-	          	<p>Apolline General Trading is a leading import and export company with 2 years of experience in global trade. Our mission is to connect businesses worldwide, helping them thrive in an increasingly interconnected marketplace.</p>
-							<p>But nothing the copy said could convince her and so it didn’t take long until a few insidious Copy Writers ambushed her, made her drunk with Longe and Parole and dragged her into their agency, where they abused her for their.</p>
+	          	<p>Welcome to Apolline General Trading, your premier partner in the import and export of fresh fruits and vegetables. With over 3 years of experience in the agricultural trade sector, we are dedicated to connecting growers and distributors worldwide, ensuring that high-quality produce reaches markets in optimal condition.</p>
+		</div>
+ 		<div class="heading-section-bold mb-4 mt-md-5">
+	          	<div class="ml-md-0">
+		            <h2 class="mb-4">Our Mission</h2>
+	            </div>
+	          </div>
+		<div class="pb-md-5">
+	            <p>At Apolline General Trading, our mission is to provide the freshest, most nutritious fruits and vegetables to consumers around the globe. We strive to simplify the supply chain, making it easy for businesses to access premium produce from trusted sources.</p>
 
-						</div>
+		</div>
+						
 					</div>
 				</div>
 			</div>
