--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
     <section id="home-section" class="hero">
 		  <div class="home-slider owl-carousel">
-		<div class="slider-item" style="background-image: url(images/AGT BANNER.jpg);">
+		<div class="slider-item" style="background-image: url(images/AGT_BANNER.jpg);">
 	      	<div class="overlay"></div>
 	        <div class="container">
 	          <div class="row slider-text justify-content-center align-items-center" data-scrollax-parent="true">
