--- a/about.html
+++ b/about.html
@@ -82,10 +82,8 @@
     <section class="ftco-section ftco-no-pb ftco-no-pt bg-light">
 			<div class="container">
 				<div class="row">
-					<div class="col-md-5 p-md-5 img img-2 d-flex justify-content-center align-items-center" style="background-image: url(images/about.jpg);">
-						<a href="https://vimeo.com/45830194" class="icon popup-vimeo d-flex justify-content-center align-items-center">
-							<span class="icon-play"></span>
-						</a>
+					<div class="col-md-5 p-md-5 img img-2 d-flex justify-content-center align-items-center slider-item" style="background-image: url(images/about.jpg);">
+		
 					</div>
 					<div class="col-md-5 py-5 wrap-about pb-md-4 ftco-animate">
 	          <div class="heading-section-bold mb-2 mt-md-3">
