--- a/about.html
+++ b/about.html
@@ -82,7 +82,7 @@
     <section class="ftco-section ftco-no-pb ftco-no-pt bg-light">
 			<div class="container">
 				<div class="row">
-					<div class="col-md-5 p-md-5 img img-2 d-flex justify-content-center align-items-center slider-item" style="background-image: url(images/AGT COCONUT.jpg);">
+					<div class="col-md-5 p-md-5 img img-2 d-flex justify-content-center align-items-center" style="background-image: url(images/.jpg);">
 		
 					</div>
 					<div class="col-md-5 py-5 wrap-about pb-md-4 ftco-animate">
